Fixes alignment on main page. Adds maxlength for security.

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .container {
   width: clamp(70vw, 50vw, 25rem);
   margin: 0 auto;
-  padding: 1rem;
+  text-align: center;
   display: flex;
   flex-direction: column;
 }
